# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../services/bundlemgr/appexecfwk_bundlemgr.gni")

group("fuzztest") {
  testonly = true
  deps = []

  deps += [
    # deps file
    "fuzztest_application/appcontrolhost_fuzzer:AppControlHostFuzzTest",
    "fuzztest_application/applicationinfo_fuzzer:ApplicationInfoFuzzTest",
    "fuzztest_application/applicationinfofromjson_fuzzer:ApplicationInfoFromJsonFuzzTest",
    "fuzztest_application/bundlefileutil_fuzzer:BundleFileUtilFuzzTest",
    "fuzztest_application/bundleinfo_fuzzer:BundleInfoFuzzTest",
    "fuzztest_application/bundleinfofromjson_fuzzer:BundleInfoFromJsonFuzzTest",
    "fuzztest_application/bundleinstalldhost_fuzzer:BundleInstalldHostFuzzTest",
    "fuzztest_application/bundleinstallerhost_fuzzer:BundleInstallerHostFuzzTest",
    "fuzztest_application/bundleinstallerproxy_fuzzer:BundleInstallerProxyFuzzTest",
    "fuzztest_application/bundlemgrhost_fuzzer:BundleMgrHostFuzzTest",
    "fuzztest_application/bundlemgrproxy_fuzzer:BundleMgrProxyFuzzTest",
    "fuzztest_application/bundleresourcehost_fuzzer:BundleResourceHostFuzzTest",
    "fuzztest_application/bundlestatuscallbackproxy_fuzzer:BundleStatusCallbackProxyFuzzTest",
    "fuzztest_application/bundlestreaminstallerhost_fuzzer:BundleStreamInstallerHostFuzzTest",
    "fuzztest_application/bundlestreaminstallerproxy_fuzzer:BundleStreamInstallerProxyFuzzTest",
    "fuzztest_application/bundlesyscap_fuzzer:BundleSysCapFuzzTest",
    "fuzztest_application/bundleuserinfo_fuzzer:BundleUserInfoFuzzTest",
    "fuzztest_application/bundleusermgrhost_fuzzer:BundleUserMgrHostFuzzTest",
    "fuzztest_application/bundleusermgrproxy_fuzzer:BundleUserMgrProxyFuzzTest",
    "fuzztest_application/checkissystemappbyuid_fuzzer:CheckIsSystemAppByUidFuzzTest",
    "fuzztest_application/cleanbundlecachefiles_fuzzer:CleanBundleCacheFilesFuzzTest",
    "fuzztest_application/cleanbundledatafiles_fuzzer:CleanBundleDataFilesFuzzTest",
    "fuzztest_application/cleancachecallbackproxy_fuzzer:CleanCacheCallbackProxyFuzzTest",
    "fuzztest_application/defaultapphost_fuzzer:DefaultAppHostFuzzTest",
    "fuzztest_application/verifymanagerhost_fuzzer:VerifyManagerHostFuzzTest",
    "fuzztest_information/abilityinfofromjson_fuzzer:AbilityInfoFromJsonFuzzTest",
    "fuzztest_information/abilityinfomarshalling_fuzzer:AbilityInfoMarshallingFuzzTest",
    "fuzztest_information/abilityinfounmarshalling_fuzzer:AbilityInfoUnmarshallingFuzzTest",
    "fuzztest_information/compatibleabilityinfo_fuzzer:CompatibleAbilityInfoFuzzTest",
    "fuzztest_information/compatibleapplicationinfo_fuzzer:CompatibleApplicationInfoFuzzTest",
    "fuzztest_information/extensionabilityinfo_fuzzer:ExtensionAbilityInfoFuzzTest",
    "fuzztest_information/forminfo_fuzzer:FormInfoFuzzTest",
    "fuzztest_information/getabilitylabel_fuzzer:GetAbilityLabelFuzzTest",
    "fuzztest_information/getappidbybundlename_fuzzer:GetAppIdByBundleNameFuzzTest",
    "fuzztest_information/getapplicationinfo_fuzzer:GetApplicationInfoFuzzTest",
    "fuzztest_information/getapplicationinfos_fuzzer:GetApplicationInfosFuzzTest",
    "fuzztest_information/getapptype_fuzzer:GetAppTypeFuzzTest",
    "fuzztest_information/getbundleInfosbymetadata_fuzzer:GetBundleInfosByMetaDataFuzzTest",
    "fuzztest_information/getbundlearchiveinfo_fuzzer:GetBundleArchiveInfoFuzzTest",
    "fuzztest_information/getbundlegids_fuzzer:GetBundleGidsFuzzTest",
    "fuzztest_information/getbundlegidsbyuid_fuzzer:GetBundleGidsByUidFuzzTest",
    "fuzztest_information/getbundleinfo_fuzzer:GetBundleInfoFuzzTest",
    "fuzztest_information/getbundleinfos_fuzzer:GetBundleInfosFuzzTest",
    "fuzztest_information/getbundlepackinfo_fuzzer:GetBundlePackInfoFuzzTest",
    "fuzztest_information/getbundlesforuid_fuzzer:GetBundlesForUidFuzzTest",
    "fuzztest_information/gethapmoduleinfo_fuzzer:GetHapModuleInfoFuzzTest",
    "fuzztest_information/getlaunchwantforbundle_fuzzer:GetLaunchWantForBundleFuzzTest",
    "fuzztest_information/getnameforuid_fuzzer:GetNameForUidFuzzTest",
    "fuzztest_information/getpermissiondef_fuzzer:GetPermissionDefFuzzTest",
    "fuzztest_information/getuidbybundlename_fuzzer:GetUidByBundleNameFuzzTest",
    "fuzztest_information/hapmoduleinfo_fuzzer:HapModuleInfoFuzzTest",
    "fuzztest_information/installparam_fuzzer:InstallParamFuzzTest",
    "fuzztest_information/queryabilityinfo_fuzzer:QueryAbilityInfoFuzzTest",
    "fuzztest_information/queryabilityinfobyuri_fuzzer:QueryAbilityInfoByUriFuzzTest",
    "fuzztest_information/queryabilityinfos_fuzzer:QueryAbilityInfosFuzzTest",
    "fuzztest_information/queryabilityinfosbyuri_fuzzer:QueryAbilityInfosByUriFuzzTest",
    "fuzztest_information/queryallabilityinfos_fuzzer:QueryAllAbilityInfosFuzzTest",
    "fuzztest_information/querykeepalivebundleinfos_fuzzer:QueryKeepAliveBundleInfosFuzzTest",
    "fuzztest_information/remoteabilityinfo_fuzzer:RemoteAbilityInfoFuzzTest",
    "fuzztest_others/GetExtResource_fuzzer:GetExtResourceFuzzTest",
    "fuzztest_others/RemoveExtResource_fuzzer:RemoveExtResourceFuzzTest",
    "fuzztest_others/appservicefwkinstalleraddappprovisioninfo_fuzzer:AppServiceFwkInstallerAddAppProvisionInfoFuzzTest",
    "fuzztest_others/appservicefwkinstallerbeforeinstall_fuzzer:AppServiceFwkInstallerBeforeInstallFuzzTest",
    "fuzztest_others/appservicefwkinstallercheckandparsefiles_fuzzer:AppServiceFwkInstallerCheckAndParseFilesFuzzTest",
    "fuzztest_others/appservicefwkinstallercheckapplabelinfo_fuzzer:AppServiceFwkInstallerCheckAppLabelInfoFuzzTest",
    "fuzztest_others/appservicefwkinstallercheckfiletype_fuzzer:AppServiceFwkInstallerCheckFileTypeFuzzTest",
    "fuzztest_others/appservicefwkinstallerextractmodule_fuzzer:AppServiceFwkInstallerExtractModuleFuzzTest",
    "fuzztest_others/appservicefwkinstallergetinnerbundleinfo_fuzzer:AppServiceFwkInstallerGetInnerBundleInfoFuzzTest",
    "fuzztest_others/appservicefwkinstallerinnerprocessinstall_fuzzer:AppServiceFwkInstallerInnerProcessInstallFuzzTest",
    "fuzztest_others/appservicefwkinstallerinstall_fuzzer:AppServiceFwkInstallerInstallFuzzTest",
    "fuzztest_others/appservicefwkinstallermergebundleinfos_fuzzer:AppServiceFwkInstallerMergeBundleInfosFuzzTest",
    "fuzztest_others/appservicefwkinstallermkdirifnotexist_fuzzer:AppServiceFwkInstallerMkdirIfNotExistFuzzTest",
    "fuzztest_others/appservicefwkinstallermovesotorealpath_fuzzer:AppServiceFwkInstallerMoveSoToRealPath",
    "fuzztest_others/appservicefwkinstallerprocessinstall_fuzzer:AppServiceFwkInstallerProcessInstallFuzzTest",
    "fuzztest_others/appservicefwkinstallerprocessnativelibrary_fuzzer:AppServiceFwkInstallerProcessNativeLibraryFuzzTest",
    "fuzztest_others/appservicefwkinstallerremovebundlecodedir_fuzzer:AppServiceFwkInstallerRemoveBundleCodeDirFuzzTest",
    "fuzztest_others/appservicefwkinstallerremoveinfo_fuzzer:AppServiceFwkInstallerRemoveInfoFuzzTest",
    "fuzztest_others/appservicefwkinstallerrollback_fuzzer:AppServiceFwkInstallerRollBackFuzzTest",
    "fuzztest_others/appservicefwkinstallersavebundleinfotostorage_fuzzer:AppServiceFwkInstallerSaveBundleInfoToStorageFuzzTest",
    "fuzztest_others/appservicefwkinstallersavepreinstallbundleinfo_fuzzer:AppServiceFwkInstallerSavePreInstallBundleInfoFuzzTest",
    "fuzztest_others/appservicefwkinstallersendbundlesystemevent_fuzzer:AppServiceFwkInstallerSendBundleSystemEventFuzzTest",
    "fuzztest_others/appservicefwkinstalleruninstalllowerversion_fuzzer:AppServiceFwkInstallerUninstallLowerVersionFuzzTest",
    "fuzztest_others/appservicefwkinstallerupdateappservice_fuzzer:AppServiceFwkInstallerUpdateAppServiceFuzzTest",
    "fuzztest_others/bmsextensionclient_fuzzer:BmsExtensionClientFuzzTest",
    "fuzztest_others/bundlecloneinstaller_fuzzer:BundlecloneinstallerFuzzTest",
    "fuzztest_others/commonevent_fuzzer:CommonEventFuzzTest",
    "fuzztest_others/copyfiles_fuzzer:CopyFilesFuzzTest",
    "fuzztest_others/deleteappjumpcontrolrule_fuzzer:DeleteAppJumpControlRuleFuzzTest",
    "fuzztest_others/deletequickfix_fuzzer:DeleteQuickFixFuzzTest",
    "fuzztest_others/deleterulebycallerbundlename_fuzzer:DeleteRuleByCallerBundleNameFuzzTest",
    "fuzztest_others/deleterulebytargetbundlename_fuzzer:DeleteRuleByTargetBundleNameFuzzTest",
    "fuzztest_others/deployquickfix_fuzzer:DeployQuickFixFuzzTest",
    "fuzztest_others/driverinstaller_fuzzer:DriverInstallerFuzzTest",
    "fuzztest_others/elementname_fuzzer:ElementNameFuzzTest",
    "fuzztest_others/filenamevalid_fuzzer:FileNameValidFuzzTest",
    "fuzztest_others/getappjumpcontrolrule_fuzzer:GetAppJumpControlRuleFuzzTest",
    "fuzztest_others/installparamunmarshalling_fuzzer:InstallParamUnmarshallingFuzzTest",
    "fuzztest_others/launcherservice_fuzzer:LauncherServiceFuzzTest",
    "fuzztest_others/moduleinfo_fuzzer:ModuleInfoFuzzTest",
    "fuzztest_others/overlaymanagerhost_fuzzer:OverlayManagerHostFuzzTest",
    "fuzztest_others/parsesyscap_fuzzer:ParseSysCapFuzzTest",
    "fuzztest_others/permissiondef_fuzzer:PermissionDefFuzzTest",
    "fuzztest_others/quickfixmanagerhost_fuzzer:QuickFixManagerHost",
    "fuzztest_others/shortcutinfo_fuzzer:ShortcutInfoFuzzTest",
    "fuzztest_others/switchquickfix_fuzzer:SwitchQuickFixFuzzTest",
    "fuzztest_others/upgradeatomicservice_fuzzer:UpgradeAtomicServiceFuzzTest",
    "fuzztest_others/verifycallingpermission_fuzzer:VerifyCallingPermissionFuzzTest",
    "fuzztest_others/verifymanagerhostimplcopyfilestotempdir_fuzzer:VerifyManagerHostImplCopyFilesToTempDirFuzzTest",
    "fuzztest_others/verifymanagerhostimpldeleteabc_fuzzer/:VerifyManagerHostImplDeleteAbcFuzzTest",
    "fuzztest_others/verifymanagerhostimplgetfilename_fuzzer:VerifyManagerHostImplGetFileNameFuzzTest",
    "fuzztest_others/verifymanagerhostimplinnerverify_fuzzer:VerifyManagerHostImplInnerVerifyFuzzTest",
    "fuzztest_others/verifymanagerhostimplmkdirIfnotexist_fuzzer:VerifyManagerHostImplMkdirIfNotExistFuzzTest",
    "fuzztest_others/verifymanagerhostimplmoveabc_fuzzer:VerifyManagerHostImplMoveAbcFuzzTest",
    "fuzztest_others/verifymanagerhostimplremovetempfiles_fuzzer:VerifyManagerHostImplRemoveTempFilesFuzzTest",
    "fuzztest_others/verifymanagerhostimplremovetempfilespaths_fuzzer:VerifyManagerHostImplRemoveTempFilesPathsFuzzTest",
    "fuzztest_others/verifymanagerhostimplrollback_fuzzer:VerifyManagerHostImplRollBackFuzzTest",
    "fuzztest_others/verifymanagerhostimplrollbackdir_fuzzer:VerifyManagerHostImplRollBackDirFuzzTest",
    "fuzztest_others/verifymanagerhostimplverify_fuzzer/:VerifyManagerHostImplVerifyFuzzTest",
    "fuzztest_others/verifymanagerhostimplverifyabc_fuzzer:VerifyManagerHostImplVerifyAbcFuzzTest",
    "fuzztest_others/verifymanagerhostimplverifyabcdir_fuzzer:VerifyManagerHostImplVerifyAbcDirFuzzTest",
    "fuzztest_others/basebundleinstallerremovemoduleanddatadir_fuzzer:BaseBundleInstallerRemoveModuleAndDataDirFuzzTest",
    "fuzztest_others/basebundleinstallerremovemoduledir_fuzzer:BaseBundleInstallerRemoveModuleDirFuzzTest",
    "fuzztest_others/basebundleinstallerextractmodulefiles_fuzzer:BaseBundleInstallerExtractModuleFilesFuzzTest",
    "fuzztest_others/basebundleinstallerrenamemoduledir_fuzzer:BaseBundleInstallerRenameModuleDirFuzzTest",
    "fuzztest_others/basebundleinstallerprocessmoduleupdate_fuzzer:BaseBundleInstallerProcessModuleUpdateFuzzTest",
    "fuzztest_others/zip_fuzzer:ZipFuzzTest",
    ]

  if (bundle_framework_default_app) {
    deps += [
      "fuzztest_information/getdefaultapplication_fuzzer:GetDefaultApplicationFuzzTest",
      "fuzztest_others/isdefaultapplication_fuzzer:IsDefaultApplicationFuzzTest",
      "fuzztest_others/resetdefaultapplication_fuzzer:ResetDefaultApplicationFuzzTest",
      "fuzztest_others/setdefaultapplication_fuzzer:SetDefaultApplicationFuzzTest",
    ]
  }

  if (bundle_framework_app_control) {
    deps += [
      "fuzztest_application/addappInstallcontrolrule_fuzzer:AddAppInstallControlRuleFuzzTest",
      "fuzztest_application/addappjumpcontrolrule_fuzzer:AddAppJumpControlRuleFuzzTest",
      "fuzztest_application/addapprunningcontrolrule_fuzzer:AddAppRunningControlRuleFuzzTest",
      "fuzztest_application/apprunningcontrolrule_fuzzer:AppRunningControlRuleFuzzTest",
      "fuzztest_application/apprunningcontrolruleresult_fuzzer:AppRunningControlRuleResultFuzzTest",
      "fuzztest_application/deleteappinstallcontrolrule_fuzzer:DeleteAppInstallControlRuleFuzzTest",
      "fuzztest_application/deleteapprunningcontrolrule_fuzzer:DeleteAppRunningControlRuleFuzzTest",
      "fuzztest_information/getappinstallcontrolrule_fuzzer:GetAppInstallControlRuleFuzzTest",
      "fuzztest_information/getapprunningcontrolrule_fuzzer:GetAppRunningControlRuleFuzzTest",
      "fuzztest_information/getdisposedstatus_fuzzer:GetDisposedStatusFuzzTest",
      "fuzztest_others/deletedisposedstatus_fuzzer:DeleteDisposedStatusFuzzTest",
      "fuzztest_others/setdisposedstatus_fuzzer:SetDisposedStatusFuzzTest",
    ]
  }
}
