# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../services/bundlemgr/appexecfwk_bundlemgr.gni")

group("fuzztest") {
  testonly = true
  deps = [ "fuzztest_bundlemanager:bundlemanagerfuzztest" ]

  deps += [
    # deps file
    "fuzztest_others/GetExtResource_fuzzer:GetExtResourceFuzzTest",
    "fuzztest_others/RemoveExtResource_fuzzer:RemoveExtResourceFuzzTest",
    "fuzztest_others/basebundleinstallerchecksyscap_fuzzer:BaseBundleInstallerCheckSysCapFuzzTest",
    "fuzztest_others/basebundleinstallercheckuninstallinnerbundleinfo_fuzzer:BaseBundleInstallerCheckUninstallInnerBundleInfoFuzzTest",
    "fuzztest_others/basebundleinstallercreatebundleanddatadir_fuzzer:BaseBundleInstallerCreateBundleAndDataDirFuzzTest",
    "fuzztest_others/basebundleinstallerextractmodule_fuzzer:BaseBundleInstallerExtractModuleFuzzTest",
    "fuzztest_others/basebundleinstallerextractmodulefiles_fuzzer:BaseBundleInstallerExtractModuleFilesFuzzTest",
    "fuzztest_others/basebundleinstallerinnerprocessbundleinstall_fuzzer:BaseBundleInstallerInnerProcessBundleInstallFuzzTest",
    "fuzztest_others/basebundleinstallerinnerprocessinstallbypreinstallinfo_fuzzer:BaseBundleInstallerInnerProcessInstallByPreInstallInfoFuzzTest",
    "fuzztest_others/basebundleinstallerinstallbundle_fuzzer:BaseBundleInstallerInstallBundleFuzzTest",
    "fuzztest_others/basebundleinstallerinstallbundlebybundlename_fuzzer:BaseBundleInstallerInstallBundleByBundleNameFuzzTest",
    "fuzztest_others/basebundleinstallerinstallbundlevector_fuzzer:BaseBundleInstallerInstallBundleVectorFuzzTest",
    "fuzztest_others/basebundleinstallermarkprebundlesyeeventboottag_fuzzer:BaseBundleInstallerMarkPreBundleSyeEventBootTagFuzzTest",
    "fuzztest_others/basebundleinstallerprocessbundleinstall_fuzzer:BaseBundleInstallerProcessBundleInstallFuzzTest",
    "fuzztest_others/basebundleinstallerprocessbundleinstallnative_fuzzer:BaseBundleInstallerProcessBundleInstallNativeFuzzTest",
    "fuzztest_others/basebundleinstallerprocessbundleinstallstatus_fuzzer:BaseBundleInstallerProcessBundleInstallStatusFuzzTest",
    "fuzztest_others/basebundleinstallerprocessbundleuninstall_fuzzer:BaseBundleInstallerProcessBundleUninstallFuzzTest",
    "fuzztest_others/basebundleinstallerprocessbundleuninstallnative_fuzzer:BaseBundleInstallerProcessBundleUnInstallNativeFuzzTest",
    "fuzztest_others/basebundleinstallerprocessbundleupdatestatus_fuzzer:BaseBundleInstallerProcessBundleUpdateStatusFuzzTest",
    "fuzztest_others/basebundleinstallerprocessinstallbundlebybundlename_fuzzer:BaseBundleInstallerProcessInstallBundleByBundleNameFuzzTest",
    "fuzztest_others/basebundleinstallerprocessmoduleupdate_fuzzer:BaseBundleInstallerProcessModuleUpdateFuzzTest",
    "fuzztest_others/basebundleinstallerprocessrecover_fuzzer:BaseBundleInstallerProcessRecoverFuzzTest",
    "fuzztest_others/basebundleinstallerrecover_fuzzer:BaseBundleInstallerRecoverFuzzTest",
    "fuzztest_others/basebundleinstallerremovebundle_fuzzer:BaseBundleInstallerRemoveBundleFuzzTest",
    "fuzztest_others/basebundleinstallerremovebundleanddatadir_fuzzer:BaseBundleInstallerRemoveBundleAndDataDirFuzzTest",
    "fuzztest_others/basebundleinstallerremovemoduleanddatadir_fuzzer:BaseBundleInstallerRemoveModuleAndDataDirFuzzTest",
    "fuzztest_others/basebundleinstallerremovemoduledir_fuzzer:BaseBundleInstallerRemoveModuleDirFuzzTest",
    "fuzztest_others/basebundleinstallerrenamemoduledir_fuzzer:BaseBundleInstallerRenameModuleDirFuzzTest",
    "fuzztest_others/basebundleinstallersetcheckresultmsg_fuzzer:BaseBundleInstallerSetCheckResultMsgFuzzTest",
    "fuzztest_others/basebundleinstalleruninstallbundle_fuzzer:BaseBundleInstallerUnInstallBundleFuzzTest",
    "fuzztest_others/basebundleinstalleruninstallbundlebyuninstallparam_fuzzer:BaseBundleInstallerUninstallBundleByUninstallParamFuzzTest",
    "fuzztest_others/basebundleinstalleruninstallbundlemodule_fuzzer:BaseBundleInstallerUnInstallBundleModuleFuzzTest",
    "fuzztest_others/bmsbundleresourcehelper_fuzzer:BmsBundleResourceHelperFuzzTest",
    "fuzztest_others/bmsecologicalrulemgrserviceclient_fuzzer:BmsEcologicalRulemgrServiceClientFuzzTest",
    "fuzztest_others/bmsextensionclient_fuzzer:BmsExtensionClientFuzzTest",
    "fuzztest_others/bmskeyeventmgr_fuzzer:BmsKeyEventMgrFuzzTest",
    "fuzztest_others/bundleagingmgr_fuzzer:BundleAgingMgrFuzzTest",
    "fuzztest_others/bundlecloneinstaller_fuzzer:BundlecloneinstallerFuzzTest",
    "fuzztest_others/bundlemanagercallback_fuzzer:BundleManagerCallbackFuzzTest",
    "fuzztest_others/bundlemanagercallbackproxy_fuzzer:BundleManagerCallbackProxyFuzzTest",
    "fuzztest_others/bundlemanagercallbackstub_fuzzer:BundleManagerCallbackStubFuzzTest",
    "fuzztest_others/bundlemutiuserinstaller_fuzzer:BundleMutiuserInstallerFuzzTest",
    "fuzztest_others/bundleoverlayinstallchecker_fuzzer:BundleOverlayInstallCheckerFuzzTest",
    "fuzztest_others/bundleoverlaymgr_fuzzer:BundleOverlayMgrFuzzTest",
    "fuzztest_others/bundleresdrawable_fuzzer:BundleResDrawableFuzzTest",
    "fuzztest_others/bundlereshostimpl_fuzzer:BundleResHostImplFuzzTest",
    "fuzztest_others/bundleresmgr_fuzzer:BundleResMgrFuzzTest",
    "fuzztest_others/bundleresparam_fuzzer:BundleResParamFuzzTest",
    "fuzztest_others/bundleresparser_fuzzer:BundleResParserFuzzTest",
    "fuzztest_others/bundleresprocess_fuzzer:BundleResProcessFuzzTest",
    "fuzztest_others/bundleresrdb_fuzzer:BundleResRdbFuzzTest",
    "fuzztest_others/checkfileparam_fuzzer:CheckFileParamFuzzTest",
    "fuzztest_others/commonevent_fuzzer:CommonEventFuzzTest",
    "fuzztest_others/createfd_fuzzer:CreateFdFuzzTest",
    "fuzztest_others/defaultapphostimpl_fuzzer:DefaultAppHostImplFuzzTest",
    "fuzztest_others/defaultappmgr_fuzzer:DefaultAppMgrFuzzTest",
    "fuzztest_others/defaultappproxy_fuzzer:DefaultAppProxyFuzzTest",
    "fuzztest_others/defaultapprdb_fuzzer:DefaultAppRdbFuzzTest",
    "fuzztest_others/deleteappjumpcontrolrule_fuzzer:DeleteAppJumpControlRuleFuzzTest",
    "fuzztest_others/deletequickfix_fuzzer:DeleteQuickFixFuzzTest",
    "fuzztest_others/deleterulebycallerbundlename_fuzzer:DeleteRuleByCallerBundleNameFuzzTest",
    "fuzztest_others/deleterulebytargetbundlename_fuzzer:DeleteRuleByTargetBundleNameFuzzTest",
    "fuzztest_others/deployquickfix_fuzzer:DeployQuickFixFuzzTest",
    "fuzztest_others/disabledynamicicon_fuzzer:DisableDynamicIconFuzzTest",
    "fuzztest_others/distributedmanager_fuzzer:DistributedManagerFuzzTest",
    "fuzztest_others/driverinstaller_fuzzer:DriverInstallerFuzzTest",
    "fuzztest_others/elementname_fuzzer:ElementNameFuzzTest",
    "fuzztest_others/getappjumpcontrolrule_fuzzer:GetAppJumpControlRuleFuzzTest",
    "fuzztest_others/getdynamicicon_fuzzer:GetDynamicIconFuzzTest",
    "fuzztest_others/getinnerbundleinfo_fuzzer:GetInnerBundleInfoFuzzTest",
    "fuzztest_others/hmpbundleinstaller_fuzzer:HmpBundleInstallerFuzzTest",
    "fuzztest_others/innereventreport_fuzzer:InnerEventReportFuzzTest",
    "fuzztest_others/installparamunmarshalling_fuzzer:InstallParamUnmarshallingFuzzTest",
    "fuzztest_others/launcherservice_fuzzer:LauncherServiceFuzzTest",
    "fuzztest_others/mkdirifnotexist_fuzzer:MkDirIfNotExistFuzzTest",
    "fuzztest_others/moduleinfo_fuzzer:ModuleInfoFuzzTest",
    "fuzztest_others/overlaydatamgr_fuzzer:OverlayDataMgrFuzzTest",
    "fuzztest_others/overlaymanagerhost_fuzzer:OverlayManagerHostFuzzTest",
    "fuzztest_others/overlaymgrhostimpl_fuzzer:OverlayMgrHostImplFuzzTest",
    "fuzztest_others/parsebundleresource_fuzzer:ParseBundleResourceFuzzTest",
    "fuzztest_others/parsesyscap_fuzzer:ParseSysCapFuzzTest",
    "fuzztest_others/permissiondef_fuzzer:PermissionDefFuzzTest",
    "fuzztest_others/processaddextresource_fuzzer:ProcessAddExtResourceFuzzTest",
    "fuzztest_others/quickfix_fuzzer:QuickFixFuzzTest",
    "fuzztest_others/quickfixbootscanner_fuzzer:QuickFixBootScannerFuzzTest",
    "fuzztest_others/quickfixdatamgr_fuzzer:QuickFixDataMgrFuzzTest",
    "fuzztest_others/quickfixdeleter_fuzzer:QuickFixDeleterFuzzTest",
    "fuzztest_others/quickfixdeployer_fuzzer:QuickFixDeployerFuzzTest",
    "fuzztest_others/quickfixmanagerhost_fuzzer:QuickFixManagerHostFuzzTest",
    "fuzztest_others/quickfixmanagerhostipml_fuzzer:QuickFixManagerHostIpmlFuzzTest",
    "fuzztest_others/quickfixmanagerrdb_fuzzer:QuickFixManagerRdbFuzzTest",
    "fuzztest_others/quickfixmgr_fuzzer:QuickFixMgrFuzzTest",
    "fuzztest_others/quickfixstatuscallbackproxy_fuzzer:QuickFixStatusCallbackProxyFuzzTest",
    "fuzztest_others/quickfixswitcher_fuzzer:QuickFixSwitcherFuzzTest",
    "fuzztest_others/recentlyunusedagingmgr_fuzzer:RecentlyUnusedAgingMgrFuzzTest",
    "fuzztest_others/removeextresourcesdb_fuzzer:RemoveExtResourcesDbFuzzTest",
    "fuzztest_others/resetbundleresourceicon_fuzzer:ResetBundleResourceIconFuzzTest",
    "fuzztest_others/rollback_fuzzer:RollBackFuzzTest",
    "fuzztest_others/routerdatastoragerdb_fuzzer:RouterDataStorageRdbFuzzTest",
    "fuzztest_others/routermaphelper_fuzzer:RouterMapHelperFuzzTest",
    "fuzztest_others/savecurdynamicicon_fuzzer:SaveCurDynamicIconFuzzTest",
    "fuzztest_others/sendbroadcast_fuzzer:SendBroadCastFuzzTest",
    "fuzztest_others/servicecenterconnection_fuzzer:ServiceCenterConnectionFuzzTest",
    "fuzztest_others/servicecenterstatuscallback_fuzzer:ServiceCenterStatusCallbackFuzzTest",
    "fuzztest_others/servicecenterstatuscallbackstub_fuzzer:ServiceCenterStatusCallbackStubFuzzTest",
    "fuzztest_others/shortcutdatastoragerdb_fuzzer:ShortCutDataStorageRdbFuzzTest",
    "fuzztest_others/shortcutinfo_fuzzer:ShortcutInfoFuzzTest",
    "fuzztest_others/switchquickfix_fuzzer:SwitchQuickFixFuzzTest",
    "fuzztest_others/systemabilityhelper_fuzzer:SystemAbilityHelperFuzzTest",
    "fuzztest_others/upgradeatomicservice_fuzzer:UpgradeAtomicServiceFuzzTest",
    "fuzztest_others/verifycallingpermission_fuzzer:VerifyCallingPermissionFuzzTest",
  ]

  if (bundle_framework_default_app) {
    deps += [
      "fuzztest_others/isdefaultapplication_fuzzer:IsDefaultApplicationFuzzTest",
      "fuzztest_others/resetdefaultapplication_fuzzer:ResetDefaultApplicationFuzzTest",
    ]
  }

  if (bundle_framework_app_control) {
    deps += [
      "fuzztest_others/deletedisposedstatus_fuzzer:DeleteDisposedStatusFuzzTest",
    ]
  }
}
